<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_groups">Groups</string>
    <string name="label_group_balance">Balance</string>
    <string name="label_group_payments">Payments</string>
    <string name="label_group_details">Group Details</string>
    <string name="label_group_title">Group Title</string>
    <string name="label_group_manage">Manage</string>
    <string name="label_group_members">Members</string>
    <string name="label_group_info">Info</string>
    <string name="label_group_add_member">Add Member</string>
    <string name="label_group_invite_link">Invite Link</string>
    <string name="label_group_new">New group</string>
    <string name="label_group_create">Create a new group</string>
    <string name="label_group_join">Join an existing group</string>
    <string name="label_group_invite_code">Enter the invite code</string>
    <string name="label_group_edit">Edit group</string>
    <string name="label_group_list">Groups</string>
    <string name="label_my_groups">My Groups</string>
    <string name="label_group_total_spent">Total spent</string>
    <plurals name="label_group_members_count">
        <item quantity="one">%1$d member</item>
        <item quantity="other">%1$d members</item>
    </plurals>
    <string name="label_payment_detail">Payment Detail</string>
    <string name="label_payment_new">New payment</string>
    <string name="label_payment_new_expense">New expense</string>
    <string name="label_payment_new_settlement">New settlement</string>
    <string name="label_payment_description">Description</string>
    <string name="label_payment_value">Value</string>
    <string name="label_payment_paid_by">Paid by</string>
    <string name="label_payment_paid_to">Paid to</string>
    <string name="label_payment_divided_by">Split by</string>
    <string name="label_payment_received_by">Payment to %1$s</string>
    <string name="label_payment_created_at">Created at</string>
    <string name="label_payment_created_by">Created by</string>
    <string name="label_payment_refund">Reversal</string>
    <string name="label_joined">Joined</string>
    <string name="label_account">Account</string>
    <string name="label_unnamed">Unnamed</string>
    <string name="label_share_invite_code">Share invite code</string>
    <string name="label_share_balance">Share balance</string>
    <string name="label_total_spent">Total spent %1$s</string>
    <string name="label_suggestion">Suggestions</string>
    <string name="label_settlement">🤝 Settlement</string>
    <string name="label_select">Select</string>
    <string name="label_refresh_groups">Refresh groups</string>

    <string name="message_welcome">Welcome %1$s</string>
    <string name="message_owes">Owes %1$s</string>
    <string name="message_is_owned">Is owned %1$s</string>
    <string name="message_no_expenses">No payments, add one Click on + New expense button below</string>
    <string name="message_settled_up">Settled up</string>
    <string name="message_payment_detail">Paid by %1$s to %2$s</string>
    <string name="message_payment_detail_to_all">Paid by %1$s</string>
    <string name="message_invite_code">Invite code: %1$s</string>
    <string name="message_groups_empty">No groups, create or join one\nClick on + New Group button below</string>
    <string name="message_payment_description">%1$s - %2$s, paid by %3$s to %4$s\nCreated at %5$s</string>
    <string name="message_payment_split_description">%1$s - %2$s, paid by %3$s splitted to %4$s\nCreated at %5$s</string>
    <string name="message_payment_created_by">by %1$s</string>
    <string name="message_group_saved_success">Group updated with success</string>
    <string name="message_confirm_user_remove">Are you sure about removing this user?</string>
    <string name="message_confirm_group_delete">Are you sure about deleting this group?</string>
    <string name="message_share_invite_code">Use this code to join us on Shared Bills App: %1$s\nhttps://play.google.com/store/apps/details?id=br.com.jwar.sharedbill</string>
    <string name="message_add_members">Add new members to the group to start splitting bills!</string>
    <string name="message_has_not_joined">Invite to join</string>
    <string name="message_payment_reverse">Refund to %1$s</string>
    <string name="message_payment_reversed">Reversed</string>

    <string name="placeholder_user_name">Enter the first and last name</string>
    <string name="placeholder_group_title">Ex. 🏠 Home</string>
    <string name="placeholder_add_member_name">Ex. Walter White</string>
    <string name="placeholder_payment_description">Ex. Food</string>
    <string name="placeholder_payment_paid_by">Select a payer</string>
    <string name="placeholder_payment_paid_to">Select related members</string>
    <string name="placeholder_payment_value">$0.00</string>

    <string name="error_generic">Something went wrong</string>
    <string name="error_payment_user_not_in_group">You are not in this group anymore</string>
    <string name="error_payment_payer_not_in_group">You cannot select this member as payer</string>
    <string name="error_payment_description_empty">Please provide a description</string>
    <string name="error_payment_value_invalid">Please provide a valid value</string>
    <string name="error_payment_date_invalid">Please provide a valid date</string>
    <string name="error_payment_empty_related_members">Please select at least one member</string>
    <string name="error_payment_members_size_invalid">The group should have at least two members. Please add a new group member.</string>
    <string name="error_removing_member_with_non_zero_balance">You cannot remove this user until settle up him</string>
    <string name="error_removing_owner_member">You cannot remove the group owner</string>
    <string name="error_deleting_group_from_non_owner">Only the owner can delete this group</string>
    <string name="error_group_invalid_title">Please provide a valid title</string>
    <string name="error_invalid_user_name">Please provide first and last name</string>
    <string name="error_unauthenticated_user">You need to sign in first</string>
    <string name="error_group_join">Error joining the group</string>
    <string name="error_group_not_found">Group not found</string>
    <string name="error_invalid_invite_code">Invalid invite code</string>

    <string name="description_group_image">Group Image</string>
    <string name="description_back">Back action</string>
    <string name="description_close">Close action</string>
    <string name="description_user_image">User image</string>

    <array name="samples_group_title">
        <item>🏠 My house</item>
        <item>️❤️ Me&amp;You</item>
        <item>🚙 Trip</item>
        <item>🎸 My band</item>
        <item>⚽ My team</item>
        <item>🍻 Happy Hour</item>
        <item>💼 Coworkers</item>
    </array>

    <array name="samples_payment_description">
        <item>️🧾 Bills</item>
        <item>🛒 Groceries</item>
        <item>🔧 Services</item>
        <item>🚙 Transport</item>
        <item>🍸 Leisure activity</item>
        <item>🛏️ Accommodation</item>
        <item>💓 Healthcare</item>
        <item>🛍 Shopping</item>
        <item>🧰 Utilities</item>
        <item>🧩 Misc</item>
    </array>
</resources>