package br.com.jwar.sharedbill.testing

object TestTags {
    const val LoadingContent = "LoadingContent"
    const val ErrorContent = "ErrorContent"
    const val EmptyContent = "EmptyContent"
    const val PaymentContent = "PaymentContent"
    const val GroupListContent = "GroupListContent"
    const val GroupDetailContent = "GroupDetailContent"
    const val PaymentList = "PaymentList"
    const val BalanceList = "BalanceList"
}
