<resources>
    <string name="app_name">Shared Bills</string>
    <string name="empty" translatable="false" />

    <string name="label_loading">Loading</string>
    <string name="label_ok">OK</string>
    <string name="label_save">Save</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_send">Send</string>
    <string name="label_yes">Yes</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_verify">Verify</string>
    <string name="label_create">Create</string>
    <string name="label_date">Date</string>
    <string name="label_try_again">Try again</string>
    <string name="label_delete">Delete</string>
    <string name="label_leave">Leave</string>
    <string name="label_done">Done</string>

    <string name="message_empty_content">Nothing here</string>
    <string name="message_error_content">Something went wrong</string>
    <string name="message_confirm_action">Are you sure about this? This cannot be undone.</string>

    <string name="placeholder_payment_date" translatable="false">dd/mm/yyyy</string>

    <string name="description_delete">Delete action</string>
    <string name="description_leave">Leave action</string>
    <string name="description_back">Back</string>
    <string name="description_close">Close</string>
    <string name="description_done">Done action</string>
    <string name="description_user_avatar">User avatar</string>
    <string name="description_empty">Empty state image</string>
    <string name="description_increment">Increment</string>
    <string name="description_decrement">Decrement</string>
</resources>